--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    <p>Click the Left Mouse Button to Grow the Triangle</p>
+		    <br>
+		    <p>Click the Right Mouse Button to Shrink the Triangle</p>
+		    <br>
+		    <p>Move the Mouse to Change the Color and Position of the Triangle</p>
 	    </footer>
 	</body>
 </html>
